--- a/classes/templates/classroom_list.html
+++ b/classes/templates/classroom_list.html
@@ -4,7 +4,7 @@
 <div class="row">
 	{% for classroom in classrooms %}
 <div class="col-sm-4">
-	<div class="card">
+	<div class="card text-center">
 		<div class="card-body">
 			<h5 class="card-title">Name: {{classroom.name}}</h5>
 			<p class="card-text">Subject: {{classroom.subject}}</p>
